--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -6,3 +6,72 @@ body {
 	
 	
 }
+
+h1{
+	float:left;
+	font-size: 80px;
+	margin-top: 0px;
+	display:inline;
+	background: rgba(0,0,0,.70);
+	color: #fff;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	padding: 10px;
+	
+	
+}
+
+nav {
+	float: left;
+	display: block;
+	margin-left: 300px;
+	margin-top: 55px;
+	
+	
+}
+
+h2{
+	text-align: center;
+	font-size: 50px;
+	padding-top: 200px;
+	
+}
+
+div{
+	float: left;
+	display: inline;
+	
+	
+}
+
+.form-box {
+	position: absolute;
+	left: 10px;
+	top: 170px;
+	
+}
+
+.search-field {
+	height: 30px;
+	width: 400px;
+	
+	
+	
+}
+
+a {
+	text-decoration: none;
+	margin-left: 90px;
+	margin-right: 90px;
+	color: #fff;
+	background-color: #000;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	padding: 10px;
+	background: rgba(0,0,0,.70);
+	font-size: 30px;
+	
+	
+	
+	
+	
+}
+	
