--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -2,7 +2,9 @@
 /* CSS Document */
 
 body {
-	background-image: url("images/wood2.jpg");
+	background-image: url( "images/wood2.jpg");
+	background-size: contain;
+	background-size: cover;
 	
 	
 }
@@ -30,9 +32,14 @@ nav {
 }
 
 h2{
-	text-align: center;
 	font-size: 50px;
-	padding-top: 200px;
+	color:#fff;
+	background-color: #000;
+	background: rgba(0,0,0,.70);
+	float:left;
+	width: 56vw;
+	padding-left: 1100px;
+	
 	
 }
 
@@ -68,10 +75,29 @@ a {
 	padding: 10px;
 	background: rgba(0,0,0,.70);
 	font-size: 30px;
+}
+
+div1{
+	margin-left: 100px;
+	margin-right: auto;
 	
+}
+
+h3{
+	font-size: 50px;
+	color:#fff;
+	background-color: #000;
+	background: rgba(0,0,0,.70);
+	text-align: center;
 	
-	
+}
+
+
+.footer{
+	color: aliceblue;
+	text-align: center;
+	background-color: #000;
+	background: rgba(0,0,0,.70);
 	
 	
 }
-	
